# git-repo-sync

./: Makefile  README.md  dev.dockerfile  docker-compose.aws.yml  docker-compose.yml  docker-entrypoint.sh  heroku.yml  prod.dockerfile  pyproject.toml
env/: .env.template
examples/: push.json
nginx/: nginx.conf
src/git_repo_sync/: app.py  config.py  util.py
src/git_repo_sync/scripts/: old.sh
tests/: conftest.py  test_config.py  test_git_repo_sync.py  test_sync.py  test_util.py
